[package]
name = "ewebsock"
version = "0.3.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
description = "WebSocket client that works natively and on the web (WASM)"
edition = "2021"
rust-version = "1.65"
license = "MIT OR Apache-2.0"
readme = "../README.md"
homepage = "https://github.com/rerun-io/ewebsock"
repository = "https://github.com/rerun-io/ewebsock"
categories = ["web-programming", "wasm"]
keywords = ["websocket", "websockets", "portable", "native", "web"]
include = ["../LICENSE-APACHE", "../LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]


[features]
default = ["with_tungstenite"]
tls = ["tokio-tungstenite/rustls-tls-webpki-roots"]
with_tungstenite = [
  "async-stream",
  "futures-util",
  "futures",
  "tokio-tungstenite",
  "tokio",
  "tungstenite",
]


[dependencies]
tracing = "0.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Feature "websocket":
# websocket = {version = "0.26", optional = true } # not so up-to-date, and uses openssl :(

# Feature "tungstenite":
async-stream = { version = "0.3", optional = true }
futures = { version = "0.3", optional = true }
futures-util = { version = "0.3", default-features = false, features = [
  "sink",
  "std",
], optional = true }
tokio = { version = "1.16", features = ["rt", "sync"], optional = true }
tokio-tungstenite = { version = ">=0.17, <=0.20", optional = true }
tungstenite = { version = ">=0.17, <=0.20", optional = true }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]
