[package]
name = "example_app"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
include = ["../LICENSE-APACHE", "../LICENSE-MIT", "**/*.rs", "Cargo.toml"]
publish = false


[lib]
crate-type = ["cdylib", "rlib"]


[features]
default = []

## Test the tokio backend:
tokio = ["ewebsock/tokio", "dep:tokio"]


[dependencies]
ewebsock = { path = "../ewebsock", features = ["tls"] }

eframe = "0.22.0" # Gives us egui, epi and web+native backends
log = "0.4"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
tokio = { version = "1.16", optional = true, features = [
    "macros",
    "rt-multi-thread",
] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
