[package]
name = "example_app"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition = "2021"
rust-version = "1.76"
license = "MIT OR Apache-2.0"
include = ["../LICENSE-APACHE", "../LICENSE-MIT", "**/*.rs", "Cargo.toml"]
publish = false


[features]
default = []

## Test the tokio backend:
tokio = ["ewebsock/tokio", "dep:tokio"]


[dependencies]
ewebsock = { path = "../ewebsock", features = ["tls"] }

eframe.workspace = true
log.workspace = true
env_logger.workspace = true

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, optional = true, features = [
    "macros",
    "rt-multi-thread",
] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
web-sys.workspace = true              # to access the DOM (to hide the loading text)
